--- a/wraps/LSTM_model.ipynb
+++ b/wraps/LSTM_model.ipynb
@@ -2,121 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>RainToday</th>\n",
-       "      <th>RainTomorrow</th>\n",
-       "      <th>Pressure</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Temp</th>\n",
-       "      <th>WindVelocity</th>\n",
-       "      <th>Brightness</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1007.40</td>\n",
-       "      <td>46.5</td>\n",
-       "      <td>19.35</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>1.702504</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1009.20</td>\n",
-       "      <td>34.5</td>\n",
-       "      <td>20.75</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>1.702504</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1008.15</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>22.10</td>\n",
-       "      <td>68.5</td>\n",
-       "      <td>1.702504</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1015.20</td>\n",
-       "      <td>30.5</td>\n",
-       "      <td>22.30</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>1.702504</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1008.40</td>\n",
-       "      <td>57.5</td>\n",
-       "      <td>23.75</td>\n",
-       "      <td>54.5</td>\n",
-       "      <td>1.016647</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0  RainToday  RainTomorrow  Pressure  Humidity   Temp  \\\n",
-       "0           0        0.0             0   1007.40      46.5  19.35   \n",
-       "1           1        0.0             0   1009.20      34.5  20.75   \n",
-       "2           2        0.0             0   1008.15      34.0  22.10   \n",
-       "3           3        0.0             0   1015.20      30.5  22.30   \n",
-       "4           4        0.0             0   1008.40      57.5  23.75   \n",
-       "\n",
-       "   WindVelocity  Brightness  \n",
-       "0          66.0    1.702504  \n",
-       "1          57.0    1.702504  \n",
-       "2          68.5    1.702504  \n",
-       "3          34.0    1.702504  \n",
-       "4          54.5    1.016647  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas\n",
     "import matplotlib.pyplot as plt\n",
@@ -126,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Do normalization on samples. Only Non-discrete columns."
+    "#*************************Do normalization on samples. Only Non-discrete columns.*************************************"
    ]
   },
   {
@@ -168,7 +56,162 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from keras.layers import LSTM\n",
+    "from keras.models import Sequential, Model\n",
+    "from keras.layers import Input, Dense, Flatten, Dropout, Activation, Lambda, Permute, Reshape\n",
+    "import json\n",
+    "import scipy\n",
+    "from keras.callbacks import Callback, ModelCheckpoint\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import cohen_kappa_score, accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weather_predictor(X_train,Y_train,hparam):\n",
+    "    \n",
+    "    model = Sequential()\n",
+    "\n",
+    "    input_shape=(X_train.shape[1],X_train.shape[2])\n",
+    "\n",
+    "    model.add(LSTM(units=30,return_sequences=True,input_shape=input_shape))\n",
+    "    model.add(Dropout(0.2))\n",
+    "\n",
+    "    model.add(LSTM(units=30))\n",
+    "    model.add(Dropout(0.2))\n",
+    "    model.add(Dense(unit=20))\n",
+    "    model.add(Dense(unit=10))\n",
+    "    model.add(Dense(unit=4))\n",
+    "    model.add(Dense(units=1, activation='sigmoid'))\n",
+    "    model.compile(optimizer='adam', loss=\"binary_crossentropy\",metrics=['accuracy'])\n",
+    "    trainer=model.fit(X_train, y_train, epochs=hparam.epoch,batch_size=hparam.batch,validation_split=hparam.eval_split)\n",
+    "    \n",
+    "    plt.plot(trainer.history['accuracy'])\n",
+    "    plt.plot(trainer.history['val_accuracy'])\n",
+    "    plt.title('Model accuracy')\n",
+    "    plt.ylabel('Accuracy')\n",
+    "    plt.xlabel('Epoch')\n",
+    "    plt.legend(['Train', 'val'], loc='upper left')\n",
+    "    plt.show()\n",
+    "    plt.plot(trainer.history['loss'])\n",
+    "    plt.plot(trainer.history['val_loss'])\n",
+    "    plt.title('Model loss')\n",
+    "    plt.ylabel('Loss')\n",
+    "    plt.xlabel('Epoch')\n",
+    "    plt.legend(['Train', 'val'], loc='upper left')\n",
+    "    plt.show()\n",
+    "\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train,X_test,Y_train,Y_test=train_test_split(Samples_normalized,Labels_normalized,test_size=0.2,random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class hparam_config():\n",
+    "      def __init__(self, epoch,batch,eval_split):\n",
+    "        self.epoch=epoch\n",
+    "        self.batch=batch\n",
+    "        self.eval_split=eval_split\n",
+    "\n",
+    "param_list=hparam_config(epoch=10,batch=100,eval_split=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wraps=weather_predictor(X_train,Y_train,param_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_predproba=wraps.predict(X_test,Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import roc_curve\n",
+    "from sklearn.metrics import roc_auc_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr_auc = roc_auc_score(y_test_final,Y_predproba)\n",
+    "print(lr_auc)\n",
+    "lr_fpr, lr_tpr, _ = roc_curve(Y_test, y_predproba)\n",
+    "plt.plot(lr_fpr, lr_tpr, marker='.', label='Wraps')\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "Y_pred=Y_predproba>0.5\n",
+    "accuracy_score(Y_test,Y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scikitplot as skplt\n",
+    "skplt.metrics.plot_confusion_matrix(\n",
+    "    Y_test, \n",
+    "    Y_pred,\n",
+    "    figsize=(12,12))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import save_model\n",
+    "wraps.save('Wraps_LSTM_predictor.h5')  #*****************Run this cell only for improved models."
+   ]
   }
  ],
  "metadata": {
