--- a/wraps/LSTM_model.ipynb
+++ b/wraps/LSTM_model.ipynb
@@ -2,9 +2,121 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>RainToday</th>\n",
+       "      <th>RainTomorrow</th>\n",
+       "      <th>Pressure</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Temp</th>\n",
+       "      <th>WindVelocity</th>\n",
+       "      <th>Brightness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1007.40</td>\n",
+       "      <td>46.5</td>\n",
+       "      <td>19.35</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>1.702504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1009.20</td>\n",
+       "      <td>34.5</td>\n",
+       "      <td>20.75</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>1.702504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1008.15</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>22.10</td>\n",
+       "      <td>68.5</td>\n",
+       "      <td>1.702504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1015.20</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>22.30</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>1.702504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1008.40</td>\n",
+       "      <td>57.5</td>\n",
+       "      <td>23.75</td>\n",
+       "      <td>54.5</td>\n",
+       "      <td>1.016647</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  RainToday  RainTomorrow  Pressure  Humidity   Temp  \\\n",
+       "0           0        0.0             0   1007.40      46.5  19.35   \n",
+       "1           1        0.0             0   1009.20      34.5  20.75   \n",
+       "2           2        0.0             0   1008.15      34.0  22.10   \n",
+       "3           3        0.0             0   1015.20      30.5  22.30   \n",
+       "4           4        0.0             0   1008.40      57.5  23.75   \n",
+       "\n",
+       "   WindVelocity  Brightness  \n",
+       "0          66.0    1.702504  \n",
+       "1          57.0    1.702504  \n",
+       "2          68.5    1.702504  \n",
+       "3          34.0    1.702504  \n",
+       "4          54.5    1.016647  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas\n",
     "import matplotlib.pyplot as plt\n",
@@ -14,9 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
@@ -26,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,16 +164,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Om\\Anaconda3\\envs\\opencv\\lib\\site-packages\\ipykernel_launcher.py:9: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  if __name__ == '__main__':\n"
+     ]
+    }
+   ],
    "source": [
-    "#*************************Do normalization on samples. Only Non-discrete columns.*************************************"
+    "#*************************Do normalization on samples. Only Non-discrete columns.*************************************\n",
+    "Samples_normalized=[]\n",
+    "for j in range(6):\n",
+    "    arr=Samples[:,j]\n",
+    "    maxelement=np.amax(arr)\n",
+    "    minelement=np.amin(arr)\n",
+    "    mean=np.mean(arr)\n",
+    "    for i in range(len(arr)):\n",
+    "        arr[i]=abs(arr[i]-mean)/(maxelement-minelement)\n",
+    "    if j==0:\n",
+    "        Samples_normalized=arr\n",
+    "    else:\n",
+    "        Samples_normalized=np.concatenate((Samples_normalized,arr))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(142193, 1, 6)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Samples_normalized.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Samples_normalized=Samples_normalized.reshape(Samples.shape[0],1,Samples.shape[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,12 +257,12 @@
     "\n",
     "    model.add(LSTM(units=30))\n",
     "    model.add(Dropout(0.2))\n",
-    "    model.add(Dense(unit=20))\n",
-    "    model.add(Dense(unit=10))\n",
-    "    model.add(Dense(unit=4))\n",
+    "    model.add(Dense(units=20))\n",
+    "    model.add(Dense(units=10))\n",
+    "    model.add(Dense(units=4))\n",
     "    model.add(Dense(units=1, activation='sigmoid'))\n",
     "    model.compile(optimizer='adam', loss=\"binary_crossentropy\",metrics=['accuracy'])\n",
-    "    trainer=model.fit(X_train, y_train, epochs=hparam.epoch,batch_size=hparam.batch,validation_split=hparam.eval_split)\n",
+    "    trainer=model.fit(X_train, Y_train, epochs=hparam.epoch,batch_size=hparam.batch,validation_split=hparam.eval_split)\n",
     "    \n",
     "    plt.plot(trainer.history['accuracy'])\n",
     "    plt.plot(trainer.history['val_accuracy'])\n",
@@ -114,16 +284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train,X_test,Y_train,Y_test=train_test_split(Samples_normalized,Labels_normalized,test_size=0.2,random_state=42)"
+    "X_train,X_test,Y_train,Y_test=train_test_split(Samples_normalized,Labels,test_size=0.2,random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +310,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 91003 samples, validate on 22751 samples\n",
+      "Epoch 1/10\n",
+      "91003/91003 [==============================] - 18s 202us/step - loss: nan - accuracy: 3.1867e-04 - val_loss: nan - val_accuracy: 0.0000e+00\n",
+      "Epoch 2/10\n",
+      "30000/91003 [========>.....................] - ETA: 8s - loss: nan - accuracy: 0.0000e+00"
+     ]
+    }
+   ],
    "source": [
     "wraps=weather_predictor(X_train,Y_train,param_list)"
    ]
@@ -156,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +354,7 @@
    "source": [
     "lr_auc = roc_auc_score(y_test_final,Y_predproba)\n",
     "print(lr_auc)\n",
-    "lr_fpr, lr_tpr, _ = roc_curve(Y_test, y_predproba)\n",
+    "lr_fpr, lr_tpr, _ = roc_curve(Y_test, Y_predproba)\n",
     "plt.plot(lr_fpr, lr_tpr, marker='.', label='Wraps')\n",
     "plt.xlabel('False Positive Rate')\n",
     "plt.ylabel('True Positive Rate')\n",
